--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -26,3 +26,19 @@ body
   background-color:#FAAD95
   width: 100%
   height: 100%
+
+.container
+
+#gotop {
+    position: fixed;
+    border-radius: 50px;
+    right: 20px;
+    bottom: 30px;
+    padding: 10px 16px;
+    font-size: 25px;
+    background: rgba(228, 211, 211, 0.36);
+    color: #FAFCFD;
+    cursor: pointer;
+    z-index: 1000;
+}
+
