--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -18,39 +18,50 @@ html
       .PostColumn
         .header
           img src="./使用者的頭像"
+        button #write
         .PostForm
           .header
             img src="./使用者的頭像"
           .user
-            p 使用者的姓名  
-          <div data-role="popup" id="myPopup">      
-            <form action="./資料送去的地址" method="post">
-              <input type="text" name="title" value="活動標題">
-              <input type="text" name="subtitle" value="副標題">
-              <textarea rows="輸入框的列數" cols="輸入框的行數">內容詳情</textarea>
-              <input type="submit" value="發佈>">
-            </form>
-          </div>
+            p #{使用者的姓名}  
+          #myPopup(data-role='popup')  
+            form(method="post" action="./資料送去的位址.php")
+              input(
+                type='text'
+                name='title'
+                value='活動標題'    
+                required 
+              )
+              input(
+                type='text'
+                name='subtitle'
+                value='副標題'    
+              )
+              textarea(
+                id="textarea"
+                maxlength='100'
+                placeholder='內容詳情'
+                required
+              )
+              botton(type="submit")發佈
 
       .divider
         .line
         .word
           p  分類
-        <select nabe="category">
-          <option value="recommend">推薦</option>
-          <option value="recommend">推薦</option>
-          <option value="recommend">推薦</option>
-        </select>
+        select #category
+          option(value='recommend')推薦
+          option(value='recommend')推薦
+          option(value='recommend')推薦
         .word
           p 排序
-        <select nabe="sort">
-          <option value="like">感興趣</option>
-          <option value="like">感興趣</option>
-          <option value="like">感興趣</option>
-        </select>
+        select #sort
+          option(value='hot')最多人喜歡
+          option(value='hot')最多人喜歡
+          option(value='hot')最多人喜歡
 
       .board
-        <div data-page="PostUnit_0">
+        div(data-page="PostUnit_0")
           .frame
           .main
           .mark
@@ -68,16 +79,16 @@ html
           .comment
             img src="./留言的圖案"
             a //留言的數字
-        </div>
-        <div data-page="PostUnit_{n}"></div>
+
+        div(data-page="PostUnit_{n}")
           .frame
           .main
           .mark
             img #mark src="./白色的書籤"
           .title 
-            p 一起讀書好朋友
+            p ＃揪團 去COSTCO
           .subtitle 
-            p 期末互相監督成長
+            p 有會員卡，缺司機
           .attach  
             img src="./"
             img src="./"
