--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -101,6 +101,45 @@ html
 
     #gotop
       p ˄
+      
+    #eventwindow
+      #description
+        h1 揪團去costco
+        #keywords
+          kw1 costco
+          p ,
+          kw2 有會員卡
+          p ,
+          kw3 缺司機
+        p 我真的很想去costco我真的很想去costco我真的很想去costco我真的很想去costco
+
+      #member
+        #organizer.member
+        #hr
+        #member1.member
+        #member2.member
+        #member3.member
+        #member4.member
+      
+      #eventoperate
+        #flag
+        #date
+        #organizerpic
+        p 外文系＿蔡孟岑
+
+        #likebutton
+          #like-y
+          #like-n
+
+        #applybutton
+          #apply-y
+          #apply-n
+
+
+      #sent
+        #background
+        #mailicon
+        p 已向發起者送出邀請
     
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
