--- a/static/sass/homepage.css
+++ b/static/sass/homepage.css
@@ -26,4 +26,16 @@ body {
   width: 100%;
   height: 100%; }
 
+#gotop {
+  position: fixed;
+  border-radius: 50px;
+  right: 20px;
+  bottom: 30px;
+  padding: 10px 16px;
+  font-size: 25px;
+  background: rgba(228, 211, 211, 0.36);
+  color: #FAFCFD;
+  cursor: pointer;
+  z-index: 1000; }
+
 /*# sourceMappingURL=homepage.css.map */
