--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -106,16 +106,16 @@ html
       #description
         h1 揪團去costco
         #keywords
-          kw1 costco
+          #kw1 costco
           p ,
-          kw2 有會員卡
+          #kw2 有會員卡
           p ,
-          kw3 缺司機
-        p 我真的很想去costco我真的很想去costco我真的很想去costco我真的很想去costco
+          #kw3 缺司機
+        #detail 我真的很想去costco我真的很想去costco我真的很想去costco我真的很想去costco
 
       #member
         #organizer.member
-        #hr
+        #bar
         #member1.member
         #member2.member
         #member3.member
@@ -123,9 +123,12 @@ html
       
       #eventoperate
         #flag
-        #date
+          #flag-y
+          #flag-n
+          
+        #date 2021/5/2
         #organizerpic
-        p 外文系＿蔡孟岑
+        p 蔡孟岑
 
         #likebutton
           #like-y
@@ -145,5 +148,6 @@ html
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js")
     script(src="{% static 'js/login.js' %}")
+    script(src="{% static 'js/homepage.js' %}")
     <script src="https://apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://apps.bdimg.com/libs/jquerymobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
