--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -27,8 +27,6 @@ body
   width: 100%
   height: 100%
 
-.container
-
 #gotop {
     position: fixed;
     border-radius: 50px;
@@ -42,3 +40,13 @@ body
     z-index: 1000;
 }
 
+.container 
+  display:inline-flex;
+  flex-direction:column;
+  width:
+
+.PostColumn 
+
+.PostUnit
+  display:flex;
+  flex-wrap:wrap;
