--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -52,7 +52,7 @@ body
   background-color: #A0A0A0
   border-radius: 5vw
   //opacity: 0.2
-  z-index: 0
+  z-index: 2
   
   *
     font-color: #000000
@@ -181,15 +181,22 @@ body
         //background: url()
 
   #sent
+    position: absolute
+    transform: translate(-50%, -50%)
+    top: 50%
+    left: 50%
     width: 100%
     height: 100%
-    z-index: 2
+    opacity: 0.7
+    z-index: 1
+    background-color: #000000
 
-    #background
+    #sentbackbround
       background-color: #000000
       opacity: 0.3
       -webkit-backdrop-filter: blur(5px);
       backdrop-filter: blur(5px);
+      
 
     #mailicon
       //{% load static %}
