modify event window

--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -61,43 +61,43 @@ html
           option(value='hot')最多人喜歡
 
       .board
-        div(data-page="PostUnit_0")
-          .frame
-          .main
-          .mark
-            img#mark src="./白色的書籤"
-          .title 
-            p ＃揪團 去COSTCO
-          .subtitle 
-            p 有會員卡，缺司機
-          .attach  
-            img src="./"
-            img src="./"
-          .like 
-            img src="./愛心的圖案"
-            a //愛心的數字
-          .comment
-            img src="./留言的圖案"
-            a //留言的數字
-
-        div(data-page="PostUnit_{n}")
-          .frame
-          .main
-          .mark
-            img#mark src="./白色的書籤"
-          .title 
-            p ＃揪團 去COSTCO
-          .subtitle 
-            p 有會員卡，缺司機
-          .attach  
-            img src="./"
-            img src="./"
-          .like 
-            img src="./愛心的圖案"
-            a //愛心的數字
-          .comment
-            img src="./留言的圖案"
-            a //留言的數字
+        .PostUnit
+          div(data-page="PostUnit_0")
+            .frame
+            .main
+            .mark
+              img #mark src="./白色的書籤"
+            .title 
+              p ＃揪團 去COSTCO
+            .subtitle 
+              p 有會員卡，缺司機
+            .attach  
+              img src="./"
+              img src="./"
+            .like 
+              img src="./愛心的圖案"
+              a //愛心的數字
+            .comment
+              img src="./留言的圖案"
+              a //留言的數字
+          div(data-page="PostUnit_{n}")
+            .frame
+            .main
+            .mark
+              img #mark src="./白色的書籤"
+            .title 
+              p ＃揪團 去COSTCO
+            .subtitle 
+              p 有會員卡，缺司機
+            .attach  
+              img src="./"
+              img src="./"
+            .like 
+              img src="./愛心的圖案"
+              a //愛心的數字
+            .comment
+              img src="./留言的圖案"
+              a //留言的數字
 
     #gotop
       p ˄
