--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -27,7 +27,7 @@ body
   width: 100%
   height: 100%
 
-<<<<<<< HEAD
+//<<<<<<< HEAD
 .container
 
 #gotop 
@@ -188,16 +188,13 @@ body
     left: 50%
     width: 100%
     height: 100%
-    opacity: 0.7
+    border-radius: 5vw
+    opacity: 0.6
     z-index: 1
-    background-color: #000000
+    background-color: #5A5A5A
+    //-webkit-backdrop-filter: blur(300px);
+    //backdrop-filter: blur(300px);
 
-    #sentbackbround
-      background-color: #000000
-      opacity: 0.3
-      -webkit-backdrop-filter: blur(5px);
-      backdrop-filter: blur(5px);
-      
 
     #mailicon
       //{% load static %}
@@ -210,32 +207,14 @@ body
       left: 50%
     
     p
-      font-size: 3vw
+      position: absolute
       transform: translate(-50%, 0)
-      top: 70%
+      font-size: 5vw
+      text-align: center
+      bottom: 20%
       left: 50%
-=======
-#gotop {
-    position: fixed;
-    border-radius: 50px;
-    right: 20px;
-    bottom: 30px;
-    padding: 10px 16px;
-    font-size: 25px;
-    background: rgba(228, 211, 211, 0.36);
-    color: #FAFCFD;
-    cursor: pointer;
-    z-index: 1000;
-}
+      width: 100%
+      opacity: 1
+      color: white
 
-.container 
-  display:inline-flex;
-  flex-direction:column;
-  width:
-
-.PostColumn 
-
-.PostUnit
-  display:flex;
-  flex-wrap:wrap;
->>>>>>> 624262fa0fa70d15c8079445b5ad13cd4ca108c8
+//>>>>>>> 624262fa0fa70d15c8079445b5ad13cd4ca108c8
