--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -48,8 +48,8 @@ body
   transform: translate(-50%, -50%)
   top: 50%
   left: 50%
-  width: 65vw
-  height: 47vw
+  width: 70%
+  height: 70%
   background-color: #A0A0A0
   border-radius: 5vw
   //opacity: 0.2
@@ -191,17 +191,28 @@ body
     border-radius: 5vw
     opacity: 0.6
     z-index: 1
-    background-color: #5A5A5A
-    //-webkit-backdrop-filter: blur(300px);
-    //backdrop-filter: blur(300px);
+    
+        
+    //-webkit-backdrop-filter: blur(3px)
+    //backdrop-filter: blur(8px)
+    //backdrop-filter: saturate(70%)
+    //backdrop-filter: contrast(40%)
 
+    #bgblur
+      opacity: 50%
+      backdrop-filter: blur(5px)
+      border-radius: 5vw
+      height: 100%
+      width: 100%
+      z-index: 3
 
     #mailicon
-      //{% load static %}
-      //background: url()
       position: absolute
       transform: translate(-50%, -100%)
-      height: 30%
+      //{% load static %}
+      //background-image: url('../file/lettericon.png')
+      //"{% static 'css/custom_styles_2.css' %}"
+      height: 100%
       width: auto
       top: 65%
       left: 50%
@@ -209,7 +220,7 @@ body
     p
       position: absolute
       transform: translate(-50%, 0)
-      font-size: 5vw
+      font-size: 3.5vw
       text-align: center
       bottom: 20%
       left: 50%
