--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -141,14 +141,14 @@ html
 
 
       #sent
-        #sentbackground
-        #mailicon
+        #bgblur
+        {% load static %}
+        img#mailicon src={% static '../file/lettericon.png' %}
         p 已向發起者送出邀請
     
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js")
-    script(src="{% static 'js/login.js' %}")
     script(src="{% static 'js/homepage.js' %}")
     <script src="https://apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://apps.bdimg.com/libs/jquerymobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
