--- a/static/sass/homepage.css
+++ b/static/sass/homepage.css
@@ -136,18 +136,19 @@ body {
       width: 5vw;
       background-color: green; }
   #eventwindow #sent {
-    position: absolute;
+    position: relative;
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
     width: 100%;
     height: 100%;
     border-radius: 5vw;
-    opacity: 0.6;
-    z-index: 1; }
+    opacity: 0.9;
+    z-index: 1;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px); }
     #eventwindow #sent #bgblur {
-      opacity: 50%;
-      backdrop-filter: blur(5px);
+      opacity: 0.5;
       border-radius: 5vw;
       height: 100%;
       width: 100%;
